--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "debugg": "nodemon --inspect server.js",
     "b_debugg": "nodemon --inspect-brk server.js"
   },
